# A-Maze-ing

./: .gitignore  Makefile  Projet.TODO  README.md  a_maze_ing.py  config.txt  maze.txt  my.py  pyproject.toml  subject.txt
A_Maze_ing/: Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  pyproject.toml
A_Maze_ing/Maze_generator/: explain
A_Maze_ing/Maze_generator[TEST]/: maze_generator.py
A_Maze_ing/OUTPUT_FILE/: path.txt
A_Maze_ing/display/: Explanation_MLX.md  __init__.py  ascii_renderer.py  mlx.py  mlx_renderer.py
A_Maze_ing/mazegen/: MazeGenerator.md  Parser.md  config_parser.py  config_reader.py  maze_generator.py
A_Maze_ing/mazegen-1.0.0-py3-none-any/mazegen/: __init__.py
A_Maze_ing/mazegen-1.0.0-py3-none-any/mazegen-1.0.0.dist-info/: METADATA  RECORD
A_Maze_ing/mazegen.egg-info/: PKG-INFO  SOURCES.txt
A_Maze_ing/solve/: resolve_dfs.py
A_Maze_ing/tests/: test_config.py  test_maze_generator.py
display/: ascii_renderer.py  color.py
mazegen/: maze_generator.py
parser/: __init__.py  config_parser.py  config_reader.py
solve/: __init__.py  resolve_dfs.py
